--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   "dependencies": {
       "kwaai-restcall":"0.0.9"
   },
+  "devDependencies": {
+    "fs": "0.0.2",
+    "gulp": "3.9.0",
+    "gulp-jshint": "1.11.0",
+    "npm": "2.8.3",
+    "yargs": "3.10.0"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
