--- a/package.json
+++ b/package.json
@@ -9,21 +9,18 @@
   "author": "Martin Naude <martin@encentivize.co.za>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Encentivize/bombast-node-sdk"
+    "url": "git://github.com/Encentivize/bombast-sdk-node"
   },
   "license": "MIT",
-  "homepage": "https://github.com/Encentivize/bombast-node-sdk",
+  "homepage": "https://github.com/Encentivize/bombast-sdk-node",
   "engines": {
-    "node": ">= 6.0.0"
+    "node": ">=6.0.0"
   },
   "dependencies": {
     "async": "2.3.0",
     "request": "2.81.0"
   },
   "devDependencies": {
-    "eslint": "3.19.0",
-    "gulp": "3.9.1",
-    "npm": "2.8.3",
-    "yargs": "7.0.2"
+    "eslint": "4.6.1"
   }
 }
